@@ -443,6 +443,7 @@
 	- fixes for compilation with Visual Studio 2010 (still not working completely)
 	- avoid duplicated runs for sets with bios and ram options
 	- added "size" and "crc" for all file entry in output XML for completeness and verification of output data
+	- remember the default ram and bios options for future usage
 
 	create_report
 	- added option "report_type" (0 = result report / 1 = comparison report)
